// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    aria-describedby="name-error-text"
    className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-10 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
      data-shrink={false}
      htmlFor="name-error"
    >
      foo
    </label>
    <div
      className="MuiInput-root-15 MuiInput-formControl-16 MuiInput-underline-19"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-23"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <p
      className="MuiFormHelperText-root-28"
      id="name-error-text"
    />
  </div>
</div>
`;

exports[`renders correctly with error 1`] = `
<div>
  <div
    aria-describedby="name-error-text"
    className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-10 MuiFormLabel-error-13 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
      data-shrink={false}
      htmlFor="name-error"
    >
      foo
    </label>
    <div
      className="MuiInput-root-15 MuiInput-error-20 MuiInput-formControl-16 MuiInput-underline-19"
    >
      <input
        aria-invalid={true}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-23"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <p
      className="MuiFormHelperText-root-28 MuiFormHelperText-error-29"
      id="name-error-text"
    >
      bar
    </p>
  </div>
</div>
`;
